[metadata]
name = topsis-abhishek-bawa
version = 1.0.1
author = Abhishek Bawa
author_email = abhibawa357@gmail.com
description = A command line package to calculate topsis score and rank
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhibawag/Topsis_Python_Package
project_urls =
    Bug Tracker = https://github.com/abhibawag/Topsis_Python_Package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src